cmake_minimum_required(VERSION 3.28)
project(CppProject1)

set(CMAKE_CXX_STANDARD 17)

add_executable(CppProject1 main.cpp)
add_executable(Structur3s Structur3s.cpp)
add_executable(p0inters p0inters.cpp)
add_executable(3ven0dd 3ven0dd.cpp)
add_executable(referenc1ng referenc1ng.cpp)
add_executable(heapmem heapmem.cpp)
